--- a/contracts/coffeetrackertdp/package.json
+++ b/contracts/coffeetrackertdp/package.json
@@ -2,12 +2,11 @@
   "engines": {
     "composer": "^0.20.0"
   },
-  "name": "coffeetracker4",
+  "name": "coffeetrackertdp",
   "version": "0.0.1",
   "description": "demo",
   "scripts": {
-    "prepublish": "mkdirp ./dist && composer archive create --sourceType dir --sourceName . -a ./dist/coffeetracker4.bna"
-    
+    "prepublish": "mkdirp ./dist && composer archive create --sourceType dir --sourceName . -a ./dist/coffeetrackertdp.bna"
   },
   "keywords": [
     "composer",
